--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
         "symfony/console": "^5.0.0"
     },
     "require-dev": {
+        "php": "^7.2.0",
         "phpunit/phpunit": "^8.5.2",
         "theseer/phpdox": "^0.12.0"
     },
