--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     },
     "require": {
         "guzzlehttp/guzzle": "^6.0.0",
-        "symfony/console": "^5.0.0"
+        "symfony/console": "^5.0.0 | ^4.0.0"
     },
     "require-dev": {
         "php": "^7.2.0",
