--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
 language: php
 
+os: linux
+dist: focal
+
 php:
-    - 7.2
-    - 7.3
     - 7.4
+    - 8.0
+    - 8.1
+
+env:
+    global:
+        - XDEBUG_MODE=coverage
 
 notifications:
     email:
