--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
         "atlassian",
         "confluence",
         "git",
-        "changelog"
+        "changelog",
+        "symfony",
+        "console"
     ],
     "type": "project",
     "license": "GPL-3.0-or-later",
@@ -32,16 +34,17 @@
     },
     "config": {
         "optimize-autoloader": true,
-        "apcu-autoloader": true
+        "apcu-autoloader": true,
+        "sort-packages": true
     },
     "require": {
-        "php": "^7.2.0",
-        "guzzlehttp/guzzle": "^6.0.0",
-        "symfony/console": "^5.0.0 | ^4.0.0"
+        "php": "^7.4.0 | ^8.0.0",
+        "guzzlehttp/guzzle": "^7.4.0 | ^6.5.5",
+        "symfony/console": "^6.0.0 | ^5.0.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5.2",
-        "theseer/phpdox": "^0.12.0"
+        "squizlabs/php_codesniffer": "^3.6.1",
+        "phpunit/phpunit": "^9.0.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -49,6 +52,8 @@
         "bin/conflog"
     ],
     "scripts": {
+        "phpcs": "@php vendor/squizlabs/php_codesniffer/bin/phpcs --report=full --standard=PSR12 --extensions=php ./src ./Tests",
+        "phpcbf": "@php vendor/squizlabs/php_codesniffer/bin/phpcbf --standard=PSR12 ./src ./Tests",
         "test": "@php vendor/phpunit/phpunit/phpunit --bootstrap=./vendor/autoload.php --whitelist=./src/ --testdox --coverage-clover=coverage.xml ./Tests/"
     }
 }
