Fixed travis config error

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ notifications:
         - https://outlook.office.com/webhook/5fc0971d-1679-464f-a6bf-7a764b449d7e@bc56f797-60e9-407b-bc2c-e79f2058cd21/TravisCI/ff0950008ce34f25a712223cd3d95d0e/baa29ec6-e36b-4136-8ceb-9adbb3949188
 
 before_script:
-    - travis_retry composer self-update
-    - travis_retry composer install
+    - composer self-update --no-progress --quiet --no-interaction
+    - composer update --no-progress --quiet --no-interaction
 
 script:
     - composer run test
